--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -40,6 +40,8 @@
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>{% endif %}
     {% if post.citation and post.paperurl and post.slidesurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
+    {% elsif post.paperurl and post.slidesurl %}
+    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
     {% elsif post.citation and post.paperurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a></p>
     {% elsif post.citation and post.slidesurl %}
