--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -41,7 +41,7 @@
     {% if post.citation and post.paperurl and post.slidesurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
     {% elsif post.paperurl and post.slidesurl %}
-    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
+    <p><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
     {% elsif post.citation and post.paperurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a></p>
     {% elsif post.citation and post.slidesurl %}
