--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -45,13 +45,13 @@
     {% elsif post.citation and post.paperurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Book of Abstracts</a></p>
     {% elsif post.citation and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Poster</a></p>
+    <p><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Poster</a></p>
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }}</p>
     {% elsif post.paperurl %}
       <p><a href=" {{ post.paperurl }} ">Download Book of Abstracts</a></p>
     {% elsif post.slidesurl %}
-      <p><a href="{{ post.slidesurl }}">Download Poster</a></p>
+      <p><a href="{{ post.paperurl }}">Download Book of Abstracts</a> | <a href="{{ post.slidesurl }}">Download Poster</a></p>
     {% endif %}
 
   </article>
